2018-05-30  Patrick Guio <p.guio@ucl.ac.uk>

	* configure.ac (1.35):
	  Upgraded to version 1.3.1 to include fixes to some broken codes
	  (API changes).

2018-05-30  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/webVOISEdemo3.m (1.1):
	  Added under CVS control.

2018-05-30  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/testVD2CVD.m (1.6):
	  Fixed broken code (API change in initSeeds, computeVD and
	  structure params).

2018-05-30  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/cmpVDalgo.m (1.6):
	  Fixed broken code (API change for initSeeds and computeVD).

2018-05-30  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/benchVD.m (1.13):
	  Updated broken code (API to removeSeedFromVD, initSeeds).  Added
	  input parameter for filename of timing file.

2018-05-30  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/VDexample.m (1.5):
	  Updated broken code (RandStream and updated API for computeVD).

2018-05-29  Patrick Guio <p.guio@ucl.ac.uk>

	* configure.ac (1.34):
	  Upgraded to version 1.3.0 that include bug fixes and enhanced
	  image processing and parameterisation of configuration.

2018-05-29  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/getLTC.m (1.3):
	  More work to be done.

2018-05-29  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/getFitsKeywordsValue.m (1.5):
	  Print value of keyword as well.

2018-05-29  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/loadImage.m (1.21):
	  Check for HSTFitsParam value to call getHSTInfo().

2018-05-29  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/getDefaultVOISEParams.m (1.19):
	  Added parameter HSTFitsParam to enable/disable HST fits
	  parameters decoding.

2018-05-29  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/getHSTInfo.m (1.7):
	  Added verbose flag when calling getFitsKeywordsValue function.

2018-03-08  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/loadImage.m (1.20), matlab/preprocessImage.m (1.3):
	  Changed function name preProcessImage into preprocessImage.

2018-03-08  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/preprocessImage.m (1.2):